samples/_failures_safe/1760886812_34530e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12500d24.c: In function ‘main’:
./samples/SAFE/__tmp_12500d24.c:148:5: error: expected expression at end of input
  148 |     size_t actual_compressed =
      |     ^~~~~~
./samples/SAFE/__tmp_12500d24.c:148:5: error: expected declaration or statement at end of input
